[gd_scene load_steps=45 format=3 uid="uid://htrdr826wqmu"]

[ext_resource type="Script" path="res://Scripts/enemy_spawner.gd" id="1_cbngh"]
[ext_resource type="Resource" uid="uid://blboqypb102el" path="res://Resources/Cards/card_images.tres" id="2_ocvfr"]
[ext_resource type="PackedScene" uid="uid://ddssefox1vfwx" path="res://Scenes/drop_area.tscn" id="3_h2y10"]
[ext_resource type="Script" path="res://timing_controller.gd" id="3_uk270"]
[ext_resource type="Script" path="res://Scripts/dice_spawner.gd" id="6_ab52g"]
[ext_resource type="Script" path="res://Scripts/upgrade_choice.gd" id="6_bfvkc"]
[ext_resource type="Texture2D" uid="uid://ks013go2ghyq" path="res://Assets/background.png" id="6_q28h7"]
[ext_resource type="Script" path="res://Scenes/level_list.gd" id="7_l1oo3"]
[ext_resource type="Script" path="res://Scripts/game_over_panel.gd" id="7_mm0j3"]
[ext_resource type="Resource" uid="uid://dti4c1xlf20ae" path="res://Resources/upgrade_images.tres" id="7_ws3ny"]
[ext_resource type="Script" path="res://Scripts/upgrade_drop_controller.gd" id="8_0qttn"]
[ext_resource type="Script" path="res://Scripts/enemy_info_list.gd" id="8_3io8c"]
[ext_resource type="Script" path="res://Scripts/upgrade_box.gd" id="8_kewyg"]
[ext_resource type="Script" path="res://Scripts/start_game.gd" id="9_1kml8"]
[ext_resource type="Resource" uid="uid://d4ikborktd20g" path="res://Resources/levels/level_1.tres" id="9_d3ci2"]
[ext_resource type="Texture2D" uid="uid://c6nyaby3ddf6n" path="res://Assets/upgrade_icons.png" id="9_s1n0l"]
[ext_resource type="Script" path="res://Scripts/end_turn.gd" id="10_cc70h"]
[ext_resource type="Resource" uid="uid://r0g01nsv6fo5" path="res://Resources/levels/level_2.tres" id="10_cvnde"]
[ext_resource type="Resource" uid="uid://cv7uagdti51or" path="res://Resources/levels/level_3.tres" id="11_6ybjn"]
[ext_resource type="Resource" uid="uid://d2twgmjyjxrbs" path="res://Resources/levels/level_4.tres" id="13_5tg7h"]
[ext_resource type="Script" path="res://Scripts/damage_calculator.gd" id="13_p3s4g"]
[ext_resource type="Resource" uid="uid://dimikkxpxfgbo" path="res://Resources/levels/level_5.tres" id="14_1ofho"]
[ext_resource type="Script" path="res://Scripts/floating_text_controller.gd" id="14_fdjyy"]
[ext_resource type="Texture2D" uid="uid://brgccbr11jly" path="res://Assets/startGame.png" id="14_w56xd"]
[ext_resource type="Resource" uid="uid://dv3f3k2itpicf" path="res://Resources/levels/level_6.tres" id="15_2nh4e"]
[ext_resource type="Texture2D" uid="uid://blsibpb5ir073" path="res://Assets/NextLevel.png" id="16_fp5oc"]
[ext_resource type="Resource" uid="uid://dn8k3uaok20i4" path="res://Resources/levels/level_7.tres" id="16_ocbel"]
[ext_resource type="Texture2D" uid="uid://c63su4anq4cqy" path="res://Assets/endTurn.png" id="17_5khjs"]
[ext_resource type="Resource" uid="uid://cu6wo0a2tf5jh" path="res://Resources/levels/level_8.tres" id="17_q66r4"]
[ext_resource type="Script" path="res://Scripts/audio_bank_player.gd" id="17_u2ga6"]
[ext_resource type="Resource" uid="uid://cva7fc0gqrjpk" path="res://Resources/levels/level_9.tres" id="18_1os46"]
[ext_resource type="AudioStream" uid="uid://dirll1f8fef7s" path="res://Audio/sfx/arcade_game_level_up 01.mp3" id="18_cfut3"]
[ext_resource type="Resource" uid="uid://cnjkfyfu62bxv" path="res://Resources/levels/level_10.tres" id="19_jqkc4"]
[ext_resource type="Script" path="res://Scripts/music_player.gd" id="21_a87av"]
[ext_resource type="AudioStream" uid="uid://ccobb0mq8k0f0" path="res://Audio/music/neon-gaming-by dopestuff.mp3" id="22_hb52p"]
[ext_resource type="AudioStream" uid="uid://b2ewqwbr6inys" path="res://Audio/music/8-bit by AGS Project pixabay.mp3" id="23_tw0vf"]
[ext_resource type="AudioStream" uid="uid://ckv6n4ltgx87a" path="res://Audio/music/elevator-music-calm-smooth-background-chill-hip-hop-funk by SoundGalleryByDmitryTaras.mp3" id="24_y2nnv"]
[ext_resource type="AudioStream" uid="uid://b562aue14gfy2" path="res://Audio/music/kl-peach-game-over-ii by Lightyeartraxx.mp3" id="25_wlbgg"]

[sub_resource type="Gradient" id="Gradient_4x4eg"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u1m25"]
gradient = SubResource("Gradient_4x4eg")
width = 1080
height = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_8f5x8"]
atlas = ExtResource("9_s1n0l")
region = Rect2(0, 0, 96, 96)

[sub_resource type="LabelSettings" id="LabelSettings_e73bb"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7bs5s"]
bg_color = Color(0.0361009, 0.0361009, 0.0361009, 1)

[sub_resource type="LabelSettings" id="LabelSettings_m5ubk"]
font_size = 200

[node name="Main" type="Node"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_q28h7")
region_rect = Rect2(0, 1, 768, 767)
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 50
patch_margin_bottom = 50

[node name="Control" type="HBoxContainer" parent="Control"]
custom_minimum_size = Vector2(0, 192.01)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Control" type="Control" parent="Control/Control"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 1

[node name="drop_area" parent="Control/Control/Control" groups=["rolling_slot"] instance=ExtResource("3_h2y10")]

[node name="Control2" type="Control" parent="Control/Control"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 1

[node name="drop_area" parent="Control/Control/Control2" groups=["rolling_slot"] instance=ExtResource("3_h2y10")]

[node name="Control3" type="Control" parent="Control/Control"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 1

[node name="drop_area" parent="Control/Control/Control3" groups=["rolling_slot"] instance=ExtResource("3_h2y10")]

[node name="Control4" type="Control" parent="Control/Control"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 1

[node name="drop_area" parent="Control/Control/Control4" groups=["rolling_slot"] instance=ExtResource("3_h2y10")]

[node name="Control5" type="Control" parent="Control/Control"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 1

[node name="drop_area" parent="Control/Control/Control5" groups=["rolling_slot"] instance=ExtResource("3_h2y10")]

[node name="enemy_spawner" type="Node" parent="Control" node_paths=PackedStringArray("spawn_parent", "tim_con", "_spawn_area", "dead_line")]
unique_name_in_owner = true
script = ExtResource("1_cbngh")
spawn_parent = NodePath("spawn_parent")
tim_con = NodePath("../../timing_controller")
_spawn_area = NodePath("spawn_width")
card_list = ExtResource("2_ocvfr")
dead_line = NodePath("dead_line")

[node name="spawn_width" type="Control" parent="Control/enemy_spawner"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="spawn_parent" type="Node" parent="Control/enemy_spawner"]

[node name="dead_line" type="Sprite2D" parent="Control/enemy_spawner"]
visible = false
texture = SubResource("GradientTexture2D_u1m25")
centered = false

[node name="dice_spawner" type="Node" parent="Control"]
unique_name_in_owner = true
script = ExtResource("6_ab52g")

[node name="upgrade_drop_controller" type="Node" parent="Control" node_paths=PackedStringArray("spawn_pos", "start_button")]
script = ExtResource("8_0qttn")
spawn_pos = NodePath("Control/Control/Marker2D")
start_button = NodePath("../../UI/start_game")

[node name="Control" type="Control" parent="Control/upgrade_drop_controller"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="Control/upgrade_drop_controller/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Marker2D" type="Marker2D" parent="Control/upgrade_drop_controller/Control/Control"]

[node name="timing_controller" type="Node" parent="." node_paths=PackedStringArray("upgrades", "game_over_screen", "_dice_spawner", "musicPlayer")]
unique_name_in_owner = true
script = ExtResource("3_uk270")
diceSpeed = 3.0
enemySpeed = 3.0
upgrades = NodePath("../UI/upgrade_choice")
game_over_screen = NodePath("../UI/game_over_panel")
_dice_spawner = NodePath("../Control/dice_spawner")
musicPlayer = NodePath("../musicPlayer")

[node name="level_list" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("7_l1oo3")
level_list = Array[ExtResource("8_3io8c")]([ExtResource("9_d3ci2"), ExtResource("10_cvnde"), ExtResource("11_6ybjn"), ExtResource("13_5tg7h"), ExtResource("14_1ofho"), ExtResource("15_2nh4e"), ExtResource("16_ocbel"), ExtResource("17_q66r4"), ExtResource("18_1os46"), ExtResource("19_jqkc4")])

[node name="damage_calculator" type="Node" parent="." node_paths=PackedStringArray("_dice_spawner", "float_text", "timings")]
unique_name_in_owner = true
script = ExtResource("13_p3s4g")
_dice_spawner = NodePath("../Control/dice_spawner")
crit_chance = 30.0
float_text = NodePath("../floating_text")
timings = NodePath("../timing_controller")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="start_game" type="TextureButton" parent="UI" node_paths=PackedStringArray("overlay")]
clip_children = 2
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -307.0
offset_top = -198.0
offset_right = 307.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("14_w56xd")
script = ExtResource("9_1kml8")
start_image = ExtResource("14_w56xd")
next_level_image = ExtResource("16_fp5oc")
overlay = NodePath("ColorRect")

[node name="ColorRect" type="ColorRect" parent="UI/start_game"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.294118)

[node name="end_turn" type="TextureButton" parent="UI" node_paths=PackedStringArray("overlay")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 90.0
offset_top = -295.0
offset_right = 531.0
offset_bottom = -186.0
grow_vertical = 0
texture_normal = ExtResource("17_5khjs")
script = ExtResource("10_cc70h")
overlay = NodePath("ColorRect")

[node name="ColorRect" type="ColorRect" parent="UI/end_turn"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.294118)

[node name="upgrade_choice" type="MarginContainer" parent="UI" node_paths=PackedStringArray("upgrade_panel", "role_panel", "extra_die_panel", "drops")]
visible = false
custom_minimum_size = Vector2(0, 600)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -84.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 80
script = ExtResource("6_bfvkc")
upgrade_panel = NodePath("HBoxContainer/upgrade")
role_panel = NodePath("HBoxContainer/new_role")
extra_die_panel = NodePath("HBoxContainer/extra_dice")
all_images = ExtResource("7_ws3ny")
drops = NodePath("../../Control/upgrade_drop_controller")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/upgrade_choice"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="upgrade" type="Button" parent="UI/upgrade_choice/HBoxContainer" node_paths=PackedStringArray("text_box", "image_box")]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("8_kewyg")
text_box = NodePath("MarginContainer/VBoxContainer/Label")
image_box = NodePath("MarginContainer/VBoxContainer/TextureRect")

[node name="MarginContainer" type="MarginContainer" parent="UI/upgrade_choice/HBoxContainer/upgrade"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI/upgrade_choice/HBoxContainer/upgrade/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/upgrade_choice/HBoxContainer/upgrade/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(192, 96)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_8f5x8")
expand_mode = 4
stretch_mode = 5

[node name="Label" type="Label" parent="UI/upgrade_choice/HBoxContainer/upgrade/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Upgrade a dice to the next tier"
label_settings = SubResource("LabelSettings_e73bb")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="extra_dice" type="Button" parent="UI/upgrade_choice/HBoxContainer" node_paths=PackedStringArray("text_box", "image_box")]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("8_kewyg")
text_box = NodePath("MarginContainer/VBoxContainer/Label")
image_box = NodePath("MarginContainer/VBoxContainer/TextureRect")

[node name="MarginContainer" type="MarginContainer" parent="UI/upgrade_choice/HBoxContainer/extra_dice"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI/upgrade_choice/HBoxContainer/extra_dice/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/upgrade_choice/HBoxContainer/extra_dice/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(192, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = SubResource("AtlasTexture_8f5x8")
expand_mode = 4
stretch_mode = 4

[node name="Label" type="Label" parent="UI/upgrade_choice/HBoxContainer/extra_dice/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Upgrade a dice to the next tier"
label_settings = SubResource("LabelSettings_e73bb")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="new_role" type="Button" parent="UI/upgrade_choice/HBoxContainer" node_paths=PackedStringArray("text_box", "image_box")]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("8_kewyg")
text_box = NodePath("MarginContainer/VBoxContainer/Label")
image_box = NodePath("MarginContainer/VBoxContainer/TextureRect")

[node name="MarginContainer" type="MarginContainer" parent="UI/upgrade_choice/HBoxContainer/new_role"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI/upgrade_choice/HBoxContainer/new_role/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/upgrade_choice/HBoxContainer/new_role/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(192, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = SubResource("AtlasTexture_8f5x8")
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="UI/upgrade_choice/HBoxContainer/new_role/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Upgrade a dice to the next tier"
label_settings = SubResource("LabelSettings_e73bb")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="upgradeSound" type="AudioStreamPlayer" parent="UI/upgrade_choice"]
script = ExtResource("17_u2ga6")
sounds = Array[AudioStream]([ExtResource("18_cfut3")])

[node name="game_over_panel" type="Control" parent="UI" node_paths=PackedStringArray("timing_panel", "restartButton", "bigWriting")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("7_mm0j3")
timing_panel = NodePath("../../timing_controller")
restartButton = NodePath("Panel/VBoxContainer/try again")
bigWriting = NodePath("Panel/VBoxContainer/game over")

[node name="Panel" type="Panel" parent="UI/game_over_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7bs5s")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/game_over_panel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="game over" type="Label" parent="UI/game_over_panel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "GAME OVER"
label_settings = SubResource("LabelSettings_m5ubk")

[node name="try again" type="Button" parent="UI/game_over_panel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 80
text = " play again? "

[node name="floating_text" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("14_fdjyy")

[node name="musicPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("21_a87av")
gameMusicList = Array[AudioStream]([ExtResource("22_hb52p"), ExtResource("23_tw0vf")])
menuMusicList = Array[AudioStream]([ExtResource("24_y2nnv")])
gameOverMusicList = Array[AudioStream]([ExtResource("25_wlbgg")])
